--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@prisma/client": "^5.20.0",
     "apexcharts": "^3.45.2",
+    "bcrypt": "^5.1.1",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.6.0",
     "next": "^14.2.4",
+    "next-auth": "^4.24.8",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18"
