add bcrypt and persian calendar format package

--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "bcrypt": "^5.1.1",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.6.0",
+    "moment-jalaali": "^0.10.1",
     "next": "^14.2.4",
     "next-auth": "^4.24.8",
+    "persian-date": "^1.1.0",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/moment-jalaali": "^0.7.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
