--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "free-nextjs-admin-dashboard",
+  "name": "kolet-portal",
   "version": "1.3.4",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.20.0",
+    "@prisma/client": "^5.21.1",
     "apexcharts": "^3.45.2",
     "bcrypt": "^5.1.1",
     "flatpickr": "^4.6.13",
@@ -17,7 +17,6 @@
     "moment-jalaali": "^0.10.1",
     "next": "^14.2.4",
     "next-auth": "^4.24.8",
-    "persian-date": "^1.1.0",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18"
@@ -34,7 +33,7 @@
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "^5.20.0",
+    "prisma": "^5.21.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
